# minecraft

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
lib/include/glad/: README.md  glad.h  glad_gl.c
src/: main.cpp  opengl
src/cpp/: buffers.cpp  chunk.cpp  mesh.cpp  shaders.cpp  textures.cpp  worldgen.cpp
src/cpp/application/: application.cpp  application.hpp
src/cpp/game/: game.cpp  input.cpp  processinput.cpp  time.cpp  worldgen.cpp
src/cpp/game/world/: world.cpp  worldgen.cpp
src/cpp/meshes/: chunk.cpp  mesh.cpp  meshtransform.cpp  primitives.cpp  worldgen.cpp
src/cpp/opengl/: buffers.cpp  camera.cpp  inputmanager.cpp  shaderloader.cpp  shaders.cpp  textures.cpp  windowinit.cpp
src/cpp/renderer/: buffers.cpp  camera.cpp  mousecallback.cpp  processinput.cpp  renderloop.cpp  space.cpp  time.cpp
src/cpp/renderer/opengl/: windowglfwopengl.cpp  windowglfwopengl.hpp
src/cpp/resources/: shaderloader.cpp  shaders.cpp  textures.cpp
src/cpp/shader/: openglshaderloader.cpp  openglshaderloader.hpp  openglshaderprogramuniforms.cpp  openglshaderprogramuniforms.hpp
src/cpp/texture/: opengltextureloader.cpp  opengltextureloader.hpp
src/cpp/util/: util.cpp  utils.cpp
src/cpp/utils/: utils.cpp  utils.hpp
src/cpp/window/: mousecallback.cpp  processinput.cpp
src/include/: blocks.h  buffers.h  chunk.h  enums.h  mesh.h  meshtransform.h  primitivedata.h  primitives.h  shaders.h  structs.h  textures.h  utils.h  vertexdata.h  worldgen.h
src/include/game/: blocks.hpp  game.hpp  inputmanager.h  inputmanager.hpp  processinput.hpp  shaderloader.hpp  time.hpp  worldgen.h
src/include/game/world/: blocks.hpp  world.hpp  worldgen.hpp
src/include/general/: enums.h  fileslist.h  fileslist.hpp  primitivedata.h  primitivedata.hpp  structs.h  structs.hpp  vertexdata.h
src/include/meshes/: mesh.h  mesh.hpp  primitives.h  primitives.hpp
src/include/opengl/: buffers.h  buffers.hpp  camera.hpp  glfw.hpp  inputmanager.hpp  shaders.h  shaders.hpp  space.hpp  textures.h  windowinit.hpp
src/include/renderer/: buffers.hpp  camera.hpp  space.hpp  time.hpp
src/include/resources/: shaderloader.hpp  shaders.hpp  textures.hpp
src/include/util/: utils.h  utils.hpp
src/include/window/: input.hpp  mousecallback.hpp  processinput.hpp  windowinit.hpp
src/shaders/: fragment.glsl  light.glsl  light_fragment.glsl  light_new.glsl  light_new_fragment.glsl  light_proto.glsl  light_proto_fragment.glsl  vertex.glsl  vertex_light.glsl  vertex_light_vertex.glsl  vertex_vertex.glsl
